--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>img/pill.png">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Pharmify</title>
     <link rel="manifest" href="/manifest.webmanifest">
     <script src="/sw.js"></script>
   </head>
